Fix z-index for snackbar

--- a/StratisCore.UI/src/scss/_custom.scss
+++ b/StratisCore.UI/src/scss/_custom.scss
@@ -1762,7 +1762,7 @@ bs-daterangepicker-container {
 .notify-snack-bar {
   position: fixed;
   bottom: 0;
-  z-index: 1;
+  z-index: 5;
   height: 80px;
   width: 100%;
   font-size: 20px;
